# sequence_extractor

./: .gitignore  README.md  file_utils.py  main.py  pyproject.toml  rs_totales_file.py  translations.py  variant_file.py
tests/: __init__.py  test_main.py
